force-app/main/default/objects/Service_Case_History__c/Service_Case_History__c.object-meta.xml
<CustomObject>
    <label>Service Case History</label>
    <nameField>
        <displayFormat>SCH-{00000000}</displayFormat>
        <label>Service Case History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Case Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>