force-app/main/default/objects/Service_Case_History__c/fields/Intake_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Intake_Recommendations__c</fullName>
    <label>Intake Recommendations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>