force-app/main/default/objects/Service_Case_History__c/fields/Intake_Role__c.field-meta.xml
<CustomField>
    <fullName>Intake_Role__c</fullName>
    <label>Intake Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>