force-app/main/default/objects/Service_Case_History__c/fields/OwnerUser__c.field-meta.xml
<CustomField>
    <fullName>OwnerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Case_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>