force-app/main/default/objects/Service_Case_History__c/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Case</label>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Service Case Histories</relationshipLabel>
    <relationshipName>Service_Case_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>