force-app/main/default/objects/Service_Case_History__c/fields/Service_Case_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Case_Approval_Status__c</fullName>
    <label>Service Case Approval Status</label>
    <length>244</length>
    <type>Text</type>
</CustomField>