force-app/main/default/objects/Service_Case_History__c/fields/Service_Case_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Case_Last_Modified_Date__c</fullName>
    <label>Service Case Last Modified Date</label>
    <type>DateTime</type>
</CustomField>